# kaucan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.server.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy-render.yml  docker.yml
docs/: deployment.md
scripts/: start.sh
src/kau_can_bot/: __init__.py  answer.py  api.py  branding.py  chunker.py  cli.py  config.py  crawler.py  extractor.py  indexer.py  learning.py  live_support.py  llm.py  memory.py  models.py  official_data.py  query_normalizer.py  safety.py  storage.py  utils.py
static/: app.js  index.html  styles.css
tests/: test_answer_behavior.py  test_branding.py  test_memory.py  test_official_data.py  test_query_normalizer.py  test_safety.py
