[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kau-can-chat-bot"
version = "0.1.0"
description = "Kafkas Üniversitesi İİBF web sitesi tabanlı RAG chatbot."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
kau-can = "kau_can_bot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
